--- a/2.0Flex.html
+++ b/2.0Flex.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/home/timartin/Desktop/wyncode/c34/Fitnesspage/2.0Flex/2.0Flex.css">
-    <link rel="stylesheet" href="/home/timartin/Desktop/wyncode/c34/Fitnesspage/2.0Flex/global.css">
+    <link rel="stylesheet" href="2.0Flex.css">
+    <link rel="stylesheet" href="global.css">
     <link href="https://fonts.googleapis.com/css?family=Bitter:700|Ubuntu&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:700&display=swap" rel="stylesheet">
 
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div class="page2">
-        <div>
+        <div class="grey">
             <div class="wrkfeat">
                 <h1>Workout</h1>
                 <h1>Features</h1>
@@ -103,8 +103,8 @@
                 <h1>Performance Tracking</h1>
                 <span>Record your workout stats for others to view in real time</span>
             </div>
-            <div class="wrdpc">
-                <img src="/home/timartin/Desktop/wierdpic.png">
+            <div>
+                <img src="/home/timartin/Desktop/wierdpic.png" class="wrdpc">
             </div>
             <hr class="anotherline"/>
 
@@ -112,7 +112,7 @@
     </div>
     <div class="page3">
         <div>
-            <div>
+            <div class="align">
                 <div class="wrkfeat">
                     <h1>Featured</h1>
                     <h1>Trainers</h1>
