--- a/2.0Flex.html
+++ b/2.0Flex.html
@@ -104,7 +104,7 @@
                 <span>Record your workout stats for others to view in real time</span>
             </div>
             <div>
-                <img src="wierdpic.png" class="wrdpc">
+                <img src="wierdpic.svg" class="wrdpc">
             </div>
             <hr class="anotherline"/>
 
