Added Line to Performance

--- a/index.html
+++ b/index.html
@@ -96,9 +96,15 @@
             </div>
             <hr class="thisdiv"/>
             <div class="thatdiv">
-                <img src="greenbutt.svg" alt="button">
-                <img src="bluebutt.svg" alt="button">
-                <img src="purplebutt.svg" alt="button">
+                <div id="current">
+                    <img src="greenbutt.svg" alt="button">
+                </div>
+                <div>
+                    <img src="bluebutt.svg" alt="button">
+                </div>
+                <div>
+                    <img src="purplebutt.svg" alt="button">
+                </div>                
             </div>
             <div class="perform">
                 <h1>Performance Tracking</h1>
